# prefer-cli

./: .gitignore  .npmignore  .projections.json  Cargo.toml  README.md  index.coffee  package.json
.cargo/: config.toml
src/: cli.rs  main.rs  settings.rs
src/backend/: external.rs  mod.rs  native.rs
src/tui/: editing.rs  input.rs  mod.rs  navigation.rs  render.rs  state.rs  tree.rs
